Changing naming of the files initializing databases

--- a/initialize_facts_db.ipynb
+++ b/initialize_facts_db.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## This document is dedicated for creating a dtabase and a retriever with a file that will be used by chatbot to answer a question"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -43,62 +36,18 @@
     "\n",
     "embeddings = OpenAIEmbeddings()\n",
     "\n",
-    "\n",
-    "loader = TextLoader(\"./data/facts.txt\")\n",
+    "loader = TextLoader(\"./app/data/facts.txt\")\n",
     "\n",
     "docs = loader.load()\n",
     "\n",
     "splits = text_splitter.split_documents(docs)\n",
     "\n",
-    "vectorstore = Chroma.from_documents(documents=splits, embedding=OpenAIEmbeddings(), persist_directory=\"./app/chroma_db\")\n",
+    "vectorstore = Chroma.from_documents(documents=splits, embedding=OpenAIEmbeddings(), persist_directory=\"./app/facts_db\")\n",
     "    \n",
     "retriever = vectorstore.as_retriever()\n",
     "\n",
     "vectorstore.persist()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The text is about interesting and random facts.\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n",
-    "\n",
-    "\n",
-    "def format_docs(docs):\n",
-    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
-    "\n",
-    "template = 'Please answer the follwoing question: {question} based on the provided context: {context}'\n",
-    "\n",
-    "prompt = PromptTemplate.from_template(template)\n",
-    "\n",
-    "\n",
-    "rag_chain = (\n",
-    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
-    "    | prompt\n",
-    "    | llm\n",
-    "    | StrOutputParser()\n",
-    ")\n",
-    "\n",
-    "print(rag_chain.invoke(\"What is the text about?\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
