Moving rag chain and scripts  into separate files

--- a/scripts/initialize_facts_db.ipynb
+++ b/scripts/initialize_facts_db.ipynb
@@ -15,18 +15,45 @@
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
     "from langchain_core.prompts import PromptTemplate\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
-    "\n",
-    "\n",
+    "ROOT_DIR = os.getenv(\"ROOT_DIR\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "text_splitter = CharacterTextSplitter(\n",
     "    separator=\"\\n\",\n",
     "    chunk_size=200,\n",
@@ -36,13 +63,13 @@
     "\n",
     "embeddings = OpenAIEmbeddings()\n",
     "\n",
-    "loader = TextLoader(\"./app/data/facts.txt\")\n",
+    "loader = TextLoader(f\"{ROOT_DIR}/app/data/facts.txt\")\n",
     "\n",
     "docs = loader.load()\n",
     "\n",
     "splits = text_splitter.split_documents(docs)\n",
     "\n",
-    "vectorstore = Chroma.from_documents(documents=splits, embedding=OpenAIEmbeddings(), persist_directory=\"./app/facts_db\")\n",
+    "vectorstore = Chroma.from_documents(documents=splits, embedding=OpenAIEmbeddings(), persist_directory=f\"{ROOT_DIR}/app/facts_db\")\n",
     "    \n",
     "retriever = vectorstore.as_retriever()\n",
     "\n",
